--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,6 +7,8 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
+    display: block;
+    text-align: justify;
 
 }
 
@@ -17,22 +19,50 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 
 
+#ejercicioDos {
+    display: none;
+}
+
+
+
 /* Ejercicio 3: */
 
 /* Acá va tu código */
 
-
+#ejercicioTres {
+    position: relative;
+    top:100px;
+    left:200px;
+}
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
-
+#ejercicioCuatro {
+    position: fixed;
+    top:0px;
+    left:0px;
+}
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
+#ejercicioCinco {
+    display:flex;
+    flex-direction: row-reverse; 
+    justify-content:space-between;
+    align-items:center;
+}
 
 
 
 /* Ejercicio 6. */
+#ejercicioSiete {
+    display: flex;
+    flex-direction: column-reverse;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: stretch;
+    height: 250px;
+}
